--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "twilio": "^4.17.0"
   }
 }
